# troller-rs

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  db.rs  main.rs
src/dice/: compile.rs  display.rs  eval.rs  mod.rs  parser.rs
src/svg/: mod.rs  source.svg.template
